# unb_doutorado_fhc

./: .gitignore  00_ui_gerar_dados_sinteticos.ipynb  01_gerar_dados_sinteticos.ipynb  02_comparacao_sintetico_real.ipynb  03_pls_sem_7s_grafico_tabela.ipynb  README.md  RELATORIO.md  RELATORIO_2.md  RELATORIO_sistemaDT.md
inputs/: questionario_real.csv
outputs/: hdt_personas.csv  hdt_personas_respostas.csv  questionario_7s.csv  questionario_real_formatado.csv  questionario_sintetico_3.csv
sistemaDT_Final/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh  stop.sh
sistemaDT_Final/dados/onda1/: cross_loadings.csv  fornell_larcker.csv  htmt.csv  indicator_correlations.csv  indicator_descriptives.csv  reliability.csv  respostas_full.csv  vif.csv
sistemaDT_Final/scripts/: seed.py
sistemaDT_Final/sistema_dt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sistemaDT_Final/tests/: conftest.py  test_api.py  test_equivalence.py  test_generate_simulate.py  test_golden_smartpls.py  test_smartpls_import.py
sistemaDT_Final/twin_api/: __init__.py  db.py  main.py  orm.py  report.py  schemas.py  security.py
sistemaDT_Final/twin_api/routes/: models.py  simulate.py
sistemaDT_Final/twin_core/: __init__.py  calibrate.py  equivalence.py  generate.py  instrument.py  io_smartpls.py  model.py  noise.py  pls.py  psychometrics.py  sensitivity.py  simulate.py
sistemaDT_Final/twin_web/: app.js  index.html  styles.css
sistemaDT_Final/var/: twin.db
utils/: GerarDadosUtils.py  Sobre.md  UIUtils.py  __init__.py
