[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-dt"
version = "0.1.0"
description = "Digital Twin Cognitivo-Organizacional da Proteção Tecnológica (SPEC v2.1, Fase 0+1)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "pip-audit>=2.7",
]

[tool.setuptools]
packages = ["twin_core", "twin_api", "twin_api.routes"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
